--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         gtag('config', 'UA-106933848-2');
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
